# homeclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  homeclaw-cost-prompt.md  homeclaw-planning-prompt.md  prices.json  pyproject.toml  release-please-config.json
.beads/: metadata.json
.github/workflows/: claude-code-review.yml  docker.yml  docs.yml  release-please.yml
docs/: DEVELOPMENT.md  package-lock.json  package.json  svelte.config.js  vite.config.js  wrangler.toml
docs/src/: app.css  app.d.ts  app.html
docs/src/lib/: Header.svelte  Sidebar.svelte  nav.js
docs/src/routes/: +layout.svelte  +page.md
homeclaw/: __init__.py  __main__.py  cli.py  config.py  locking.py  pathutil.py
homeclaw/agent/: consolidation.py  context.py  cost_tracker.py  loop.py  routing.py  tool_decorator.py  tools.py
homeclaw/api/: app.py  deps.py  logbuffer.py  models.py
homeclaw/bookmarks/: models.py  store.py
homeclaw/channel/: dispatcher.py  registration.py  repl.py  telegram.py  whatsapp.py
homeclaw/contacts/: models.py  store.py
homeclaw/memory/: facts.py  markdown.py  semantic.py  status.py
homeclaw/plugins/: github.py  interface.py  loader.py  registry.py
homeclaw/reminders/: models.py  store.py
homeclaw/scheduler/: batch.py  routines.py  scheduler.py
homeclaw/web/: __init__.py  protocol.py  registry.py
plugins/brave/: plugin.py
plugins/exa/: plugin.py
plugins/firecrawl/: plugin.py
plugins/plants/: manifest.json  plugin.py
plugins/searxng/: plugin.py
scripts/: migrate_bookmarks.py  setup_dev_fixtures.py
tests/: conftest.py
tests/integration/: test_agent_loop.py  test_repl_channel.py  test_skills_api.py
tests/unit/: test_bookmarks.py  test_chat_api.py  test_config.py  test_consolidation.py  test_context_builder.py  test_cost_tracker.py  test_data_export.py  test_dispatcher.py  test_github_skills.py  test_health_api.py  test_history_pointer.py  test_http_call.py  test_marketplace_index.py  test_marketplace_installer.py  test_models.py  test_pathutil.py  test_plants_plugin.py  test_plugin_loader.py  test_plugin_registry.py  test_plugins_api.py  test_routines.py  test_skill_deps.py  test_skill_env.py  test_skill_loader.py  test_telegram_channel.py  test_tool_decorator.py  test_tool_event_feed.py  test_web_providers.py  test_whatsapp_channel.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte
ui/src/lib/: api.ts  (+7 more)
unraid/: homeclaw.xml
workspaces-dev/: config.json
workspaces-dev/alice/: history.jsonl  memory.json  reminders.json
workspaces-dev/bob/: history.jsonl  memory.json
workspaces-dev/household/: ROUTINES.md
(+81 files in other folders)
