[project]
name = "homeclaw"
version = "0.22.1"
description = "An AI that knows your whole household — your home, your family, and the people in your lives."
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=21.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "docker>=7.0",
    "python-multipart>=0.0.22",
    "telegramify-markdown>=1.1.1",
    "bcrypt>=4.0",
    "PyJWT>=2.0",
    "PyYAML>=6.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
semantic = [
    "memsearch[local]>=0.1",
    "pymilvus>=2.5,<2.6",
]
whatsapp = [
    "neonize>=0.3",
    "qrcode[pil]>=7.0",
]
dev = [
    "pyright>=1.1",
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "neonize>=0.3",
]

[project.scripts]
homeclaw = "homeclaw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["homeclaw"]
exclude = ["workspaces"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that make real LLM API calls (deselect with '-m \"not integration\"')",
]
